fix: emojis in locale files

--- a/config/languages/en.json
+++ b/config/languages/en.json
@@ -56,7 +56,7 @@
 			"name": "welcomechannel",
 			"editedChannel": "Welcome channel was changed at <#{{channelId}}>",
 			"installedChannel": "Welcome channel was set at <#{{channelId}}>. To disable run /welcomechannel disable",
-			"noChannel": "{{warningEmoji}} Channel has not been set yet",
+			"noChannel": "{{{warningEmoji}}} Channel has not been set yet",
 			"deletedChannel": "Welcome channel was deleted",
 			"selectWelcomeChannel": "Select channel for welcome message",
 			"setupChannel": "Setup channel for welcome message",
@@ -67,7 +67,7 @@
 			"name": "leavechannel",
 			"editedChannel": "Leave channel was changed at <#{{channelId}}>",
 			"installedChannel": "Leave channel was set at <#{{channelId}}>. To disabled run /leavechannel disable",
-			"noChannel": "{{warningEmoji}} Channel has not been set yet",
+			"noChannel": "{{{warningEmoji}}} Channel has not been set yet",
 			"deletedChannel": "Leave channel was deleted",
 			"selectLeaveChannel": "Select channel for leave message",
 			"setupChannel": "Setup channel for leave message",
@@ -78,7 +78,7 @@
 			"name": "jointocreate",
 			"editedChannel": "\"Join To Create\" channel was changed at <#{{channelId}}>",
 			"installedChannel": "\"Join To Create\" channel was set at <#{{channelId}}>. To disabled run /jointocreate disable",
-			"noChannel": "{{warningEmoji}} Channel has not been set yet",
+			"noChannel": "{{{warningEmoji}}} Channel has not been set yet",
 			"deletedChannel": "\"Join To Create\" channel was deleted",
 			"selectJoinToCreateChannel": "Select \"Join To Create\"",
 			"setupChannel": "Setup \"Join To Create\" channel",
