update: locale for serverInfo

--- a/config/languages/en.json
+++ b/config/languages/en.json
@@ -17,18 +17,20 @@
 			"name": "serverinfo",
 			"title": "About Server",
 			"description": "View the server information",
+			"noDescription": "No Description",
 			"generalLabel": "General",
-			"guildName": "Name: {{guildName}}",
 			"ownerId": "Owner: <@{{ownerId}}>",
 			"createdAt": "Created at: {{guildCreatedAt}}",
-			"guildDescription": "Description: {{guildDescription}}",
 			"totalMembersCount": "Members [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Users: {{guildMembersCount}}",
 			"guildBotsCount": "Bots: {{botMembersCount}}",
 			"totalChannelsCount": "Channels [ {{guildChannels}} ]",
-			"textChannelsCount": "Text: {{textChannels}}",
-			"voiceChannelsCount": "Voice: {{voiceChannels}}",
-			"categoriesCount": "Categories: {{guildCategories}}",
+			"textChannelsCount": "{{{textChannelsIco}}} `{{textChannels}}`",
+			"voiceChannelsCount": "{{{voiceChannelsIco}}} `{{voiceChannels}}`",
+			"categoriesCount": "{{{categoriesIco}}} `{{guildCategories}}`",
+			"annnouncementChannelsCount": "{{{annnouncementChannelIco}}} `{{annnouncementChannel}}`",
+			"stageChannelsCount": "{{{stageChannelIco}}} `{{stageChannel}}`",
+			"forumCount": "{{{forumIco}}} `{{forum}}`",
 			"totalEmojisCount": "Emojis [ {{totalEmojisCount}} ]",
 			"animatedEmojisCount": "Animate: {{animatedEmojisCount}}",
 			"staticEmojisCount": "Static: {{staticEmojisCount}}",
@@ -178,7 +180,7 @@
 			"momentLocale": "en",
 			"momentWeekList": "Sunday_Monday_Tuesday_Wednesday_Thursday_Friday_Saturday"
 		},
-		"defaultTimeFormat": "dddd, DD.MM.YYYY HH:mm"
+		"defaultTimeFormat": "dddd, DD.MM.YYYY"
 	},
 	"logs": {
 		"unhandledRejection": "[ERROR:UNHANDLED PROMISE REJECTION] ❯",
