--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -1,8 +1,15 @@
 {
+	"code": "ru",
 	"commands": {
 		"help": {
 			"title": "Меню команд",
 			"description": "Показать команды бота"
+		},
+		"language": {
+			"description": "Настроить язык для сервера",
+			"setLanguage": "Настроить язык для сервера",
+			"choiceLanguage": "Выбрать язык",
+			"updateLanguage": "{{{flag}}} Язык установлен на {{language}}"
 		},
 		"serverInfo": {
 			"title": "О сервере",
@@ -11,7 +18,7 @@
 			"guildName": "Название: {{guildName}}",
 			"noDescription": "Нет Описания",
 			"ownerId": "Создатель: <@{{ownerId}}>",
-			"createdAt": "Cоздан: {{guildCreatedAt}}",
+			"createdAt": "Cоздан: {{{guildCreatedAt}}}",
 			"guildDescription": "Описание: {{guildDescription}}",
 			"totalMembersCount": "Участники [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Пользователи: {{guildMembersCount}}",
@@ -33,11 +40,11 @@
 			"userOption": "Пользователь",
 			"title": "О Пользователе",
 			"createdAt": "Создан",
-			"createdTime": "{{userCreatedAt}}",
+			"createdTime": "{{{userCreatedAt}}}",
 			"statusLabel": "Статус",
 			"userStatus": "{{statusList}}",
 			"joinedAt": "Вошёл",
-			"joinedTime": "{{memberJoinedTime}}",
+			"joinedTime": "{{{memberJoinedTime}}}",
 			"memberRoles": "Роли",
 			"emptyRolesList": "нет ролей",
 			"online": "В сети",
@@ -127,23 +134,24 @@
 		},
 		"menus": {
 			"tempChannel": {
-				"noCreate": "Ты не можешь управлять каналом!",
-				"tempChannelName": {
+				"changeSettings": "Изменить настройки канала",
+				"notCreate": "Ты не можешь управлять каналом!",
+				"name": {
 					"label": "Имя",
-					"description": "Смена имени канала"
+					"description": "Изменение имени канала"
 				},
 				"limit": {
-					"label": "Limit",
-					"description": "Change the channel limit"
+					"label": "Лимит",
+					"description": "Изменени лимита канала"
 				},
 				"lockChannel": {
-					"label": "Lock",
-					"description": "Lock the channel",
+					"label": "Заблокировать",
+					"description": "Заблокировать канал",
 					"successLock": "Канал успешно заблокирован"
 				},
 				"unlockChannel": {
-					"label": "Unlock",
-					"description": "Unlock the channel",
+					"label": "Разблокировать",
+					"description": "Разблокировать канал",
 					"successUnlock": "Канал успешно разблокирован"
 				}
 			}
@@ -158,60 +166,64 @@
 		}
 	},
 	"events": {
-		"developerOnly": "Эта команда доступна только разработчику"
-	},
-	"time": {
-		"moment": {
-			"momentLocale": "ru",
-			"momentWeekList": "Воскресенье_Понедельник_Вторник_Среда_Четверг_Пятница_Суббота"
+		"developerOnly": "Эта команда доступна только разработчику",
+		"joinToCreate": {
+			"channelName": "🔉| {{username}} канал",
+			"tempVoiceChannelTitle": "Временный голосовой канал"
 		},
-		"defaultTimeFormat": "dddd, DD.MM.YYYY"
-	},
-	"logs": {
-		"errors": {
-			"errorCallCommand": "There was an error while executing this command! If this error continues, please contact us!"
-		}
-	},
-
-	"myServer": {
-		"embeds": {
-			"infoAboutServer": {
-				"title": "Добро пожаловать на наш сервер",
-				"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
-				"fields": {
-					"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
-				}
+		"time": {
+			"moment": {
+				"momentLocale": "ru",
+				"momentWeekList": "Воскресенье_Понедельник_Вторник_Среда_Четверг_Пятница_Суббота"
 			},
-			"serverRules": {
-				"politeEmbed": {
-					"title": "Будьте вежливы и уважительны",
-					"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку недопустимы."
-				},
-				"noSpamEmbed": {
-					"title": "Никакого спама или рекламы",
-					"description": "Никакой рекламы (приглашения на сервер, ссылки на другие сайты и т.д.) без разрешения администраторов сервера."
-				},
-				"personalDataEmbed": {
-					"title": "Личные данные",
-					"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
-				},
-				"adultContentEmbed": {
-					"title": "18+ контент",
-					"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
-				},
-				"streamingBehaviorEmbed": {
-					"title": "Поведение на стриме",
-					"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
-				},
-				"reportToUsEmbed": {
-					"title": "Сообщите нам",
-					"description": "Если вы видите, что против вас ведутся действия, заставляющие чувствовать вас некомфортно, сообщите об этом персоналу сервера."
-				}
+			"defaultTimeFormat": "dddd, DD.MM.YYYY"
+		},
+		"logs": {
+			"errors": {
+				"errorCallCommand": "There was an error while executing this command! If this error continues, please contact us!"
 			}
 		},
-		"buttons": {
-			"serverRules": {
-				"label": "Правила"
+
+		"myServer": {
+			"embeds": {
+				"infoAboutServer": {
+					"title": "Добро пожаловать на наш сервер",
+					"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
+					"fields": {
+						"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
+					}
+				},
+				"serverRules": {
+					"politeEmbed": {
+						"title": "Будьте вежливы и уважительны",
+						"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку недопустимы."
+					},
+					"noSpamEmbed": {
+						"title": "Никакого спама или рекламы",
+						"description": "Никакой рекламы (приглашения на сервер, ссылки на другие сайты и т.д.) без разрешения администраторов сервера."
+					},
+					"personalDataEmbed": {
+						"title": "Личные данные",
+						"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
+					},
+					"adultContentEmbed": {
+						"title": "18+ контент",
+						"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
+					},
+					"streamingBehaviorEmbed": {
+						"title": "Поведение на стриме",
+						"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
+					},
+					"reportToUsEmbed": {
+						"title": "Сообщите нам",
+						"description": "Если вы видите, что против вас ведутся действия, заставляющие чувствовать вас некомфортно, сообщите об этом персоналу сервера."
+					}
+				}
+			},
+			"buttons": {
+				"serverRules": {
+					"label": "Правила"
+				}
 			}
 		}
 	}
