--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -1,8 +1,15 @@
 {
+	"code": "uk",
 	"commands": {
 		"help": {
 			"title": "Меню команд",
 			"description": "Показати команди бота"
+		},
+		"language": {
+			"description": "Setup language for server",
+			"setLanguage": "Set language for server",
+			"choiceLanguage": "Choice language",
+			"updateLanguage": "{{{flag}}} Язык устиановлен на {{language}}"
 		},
 		"serverInfo": {
 			"title": "Про сервер",
@@ -11,7 +18,7 @@
 			"noDescription": "No Description",
 			"guildName": "Назва: {{guildName}}",
 			"ownerId": "Творець: <@{{ownerId}}>",
-			"createdAt": "Створений: {{guildCreatedAt}}",
+			"createdAt": "Створений: {{{guildCreatedAt}}}",
 			"guildDescription": "Опис: {{guildDescription}}",
 			"totalMembersCount": "Учасники [ {{totalMembersCount}} ]",
 			"guildMembersCount": "Користувачі: {{guildMembersCount}}",
@@ -33,11 +40,11 @@
 			"userOption": "Користувач",
 			"title": "Про Користувача",
 			"createdAt": "Створений",
-			"createdTime": "{{userCreatedAt}}",
+			"createdTime": "{{{userCreatedAt}}}",
 			"statusLabel": "Статус",
 			"userStatus": "{{statusList}}",
 			"joinedAt": "Увійшов",
-			"joinedTime": "{{memberJoinedTime}}",
+			"joinedTime": "{{{memberJoinedTime}}}",
 			"memberRoles": "Ролі",
 			"emptyRolesList": "немає ролей",
 			"online": "В мережi",
@@ -127,8 +134,9 @@
 		},
 		"menus": {
 			"tempChannel": {
-				"noCreate": "Ты не можешь управлять каналом!",
-				"tempChannelName": {
+				"changeSettings": "Change channel settings",
+				"notCreate": "Ты не можешь управлять каналом!",
+				"name": {
 					"label": "Name",
 					"description": "Change the channel name"
 				},
@@ -158,7 +166,11 @@
 		}
 	},
 	"events": {
-		"developerOnly": "Ця команда доступна тільки розробнику"
+		"developerOnly": "Ця команда доступна тільки розробнику",
+		"joinToCreate": {
+			"channelName": "🔉| {{username}} канал",
+			"tempVoiceChannelTitle": "Temp Voice Channel"
+		}
 	},
 	"time": {
 		"moment": {
